# ur5_apriltag_pick_and_place

./: .gitignore  CMakeLists.txt  README.md  collision_detector.cpp  collision_detector.hpp  package.xml
action/: Gripper.action  MoveToPose.action
group18_apriltag_ros/: CMakeLists.txt  package.xml
group18_apriltag_ros/cfg/: tags_36h11.yaml
group18_apriltag_ros/launch/: apriltag.launch.yml  camera_36h11.launch.yml
include/: collision_detector.cpp  collision_detector.hpp
include/group18_assignment_2/: collision_detector.hpp  color_detector.hpp  gripper_node.hpp  motion_planner.hpp  swap_coordinator.hpp
launch/: camera_36h11.launch.yml  group18_assignment_2.launch.py
src/: collision_detector.cpp  color_detector.cpp  gripper_node.cpp  gripper_test_client.cpp  motion_planner.cpp  swap_coordinator.cpp
srv/: ColorDetection.srv  GripperRequest.srv
ur5_moveit/: CMakeLists.txt  package.xml
ur5_moveit/acrions/: MoveToPose.action
ur5_moveit/cfg/: tags_36h11.yaml
ur5_moveit/include/ur5_moveit/: gripper_node.hpp  motion_planner.hpp  swap_coordinator.hpp
ur5_moveit/launch/: camera_36h11.launch.yml  group18_assignment_2.launch.py
ur5_moveit/src/: gripper_node.cpp  gripper_test_client.cpp  motion_planner.cpp  swap_coordinator.cpp
ur5_moveit/srv/: GripperRequest.srv
